2010-02-12  Gary Benson  <gbenson@redhat.com>

	* configure.ac: Strip stupid options that llvm-config supplies.

2010-02-09  Edward Nevill <ed@camswl.com>

	* cppInterpreter_arm.S / thumb2.cpp
	Make Thumb2 JIT the default build

2010-02-03  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/IcedTeaNPPlugin.cc 
	(plugin_create_applet_tag): Encode new lines, carriage returns, and other
	special characters before sending them to Java side (de-coding code is
	already in effect on Java side).

2010-02-03 Pavel Tisnovsky <ptisnovs@redhat.com>

	* Makefile.am: Add new patch.
	* patches/icedtea-6829636-loggingdeadlock2.patch
	Fix for Sun bug: 6829636: test case correction
	test/java/util/logging/loggingdeadlock2.java

2010-02-02  Deepak Bhole <dbhole@redhat.com>

	* plugin/tests/LiveConnect/PluginTest.java
	(jjsEvalTest): New function. Calls JSObject.eval() with given string.
	* plugin/tests/LiveConnect/common.js: Added eval test suite as one of the
	run options.
	* plugin/tests/LiveConnect/index.html: Same.
	* plugin/tests/LiveConnect/jjs_eval_test.js: Eval tests.

2010-02-02  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/java/sun/applet/PluginAppletViewer.java: Re-designed frame
	embedding code so that the applet is dynamically packed into given handle.

2010-02-02 Pavel Tisnovsky <ptisnovs@redhat.com>

	* Makefile.am: Add new patches.
	* patches/icedtea-6912628-turkcert.patch:
	Fix for Sun bug: 6912628: test case correction
	test/java/util/jar/JarFile/TurkCert.java cannot be run in
	samevm mode. Added tag to run this test in othervm

2010-02-02  Edward Nevill <ed@camswl.com>

	* asm_helper.cpp, cppInterpreter_arm.S, thumb2.cpp, bytecodes_arm.def
	Several bug fixes to compiled exection handling methods.
	Copyright notices updated to 2010 and added to thumb2.cpp
	Assertions turned off in PRODUCT build
	Compilation summary and stats to stderr instead of stdout

2010-02-01  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp