@@ -1,6 +1,6 @@
 /*
  * Copyright 2003-2007 Sun Microsystems, Inc.  All Rights Reserved.
- * Copyright 2007, 2008 Red Hat, Inc.
+ * Copyright 2007, 2008, 2009, 2010 Red Hat, Inc.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -249,11 +249,9 @@ void os::Linux::set_fpu_control_word(int fpu) {
 }
 
 bool os::is_allocatable(size_t bytes) {
-#ifdef AMD64
-  // unused on amd64?
+#ifdef _LP64
   return true;
 #else
-
   if (bytes < 2 * G) {
     return true;
   }
@@ -265,7 +263,7 @@ bool os::is_allocatable(size_t bytes) {
   }
 
   return addr != NULL;
-#endif // AMD64
+#endif // _LP64
 }
 
 ///////////////////////////////////////////////////////////////////////////////
